added more html code, desired job/about me

--- a/index.html
+++ b/index.html
@@ -13,16 +13,38 @@
 <body>
      <!-- Added a header -->
     <header>
-        <h1>Megan Labrecque's Portfolio</h1>
-    </header>
+        <h1>Megan Labrecque</h1>
+  
 
     <!-- Nav bar for different sections -->
-    <nav>
-        <a href="about_me">About Me</a>
-        <a href="work">My Work</a>
-        <a href="contact">Contact Me</a>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="#about_me">About Me</a></li> 
+                <li><a href="#work">My Work</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+                <li><a href="#resume">Resume</a></li>
+            </ul>
+        </nav>
+    </header>
 
+
+    <!-- Main image with pic/desired job title -->
+    <section class="job">
+        <h2>Software Developer</h2>
+    </section>
+
+    <main>
+        <!-- About me section -->
+        <section class="about-me">
+            <h3>About Me</h3>
+            <hr>
+            <article>
+                <p>Fill in this paragraph later</p>
+                <br>
+                <p>Fill in this paragraph later</p>
+            </article>
+        </section>
+    </main>
 
 
 </body>
