finished my HTML, just need footer (contact)

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-     <!-- Added a header -->
+    <!-- Added a header -->
     <header>
         <h1>Megan Labrecque</h1>
-  
 
-    <!-- Nav bar for different sections -->
+
+        <!-- Nav bar for different sections -->
         <nav>
             <ul>
-                <li><a href="#about_me">About Me</a></li> 
+                <li><a href="#about_me">About Me</a></li>
                 <li><a href="#work">My Work</a></li>
                 <li><a href="#contact">Contact Me</a></li>
                 <li><a href="#resume">Resume</a></li>
@@ -29,7 +29,7 @@
 
 
     <!-- Main image with pic/desired job title -->
-    <section class="job">
+    <section class="subtitle">
         <h2>Software Developer</h2>
     </section>
 
@@ -44,9 +44,55 @@
                 <p>Fill in this paragraph later</p>
             </article>
         </section>
+        <!-- Making all of the projects into cards -->
+        <section>
+            <h3>My Work</h3>
+            <hr>
+            <div class="card-container">
+                <section class="main-card">
+                    <article class="card-content">
+                        <div class="card-text">
+                            <h4>Surf Report</h4>
+                            <p>MERN Stack</p>
+                        </div>
+                    </article>
+                </section>
+                <section class="card">
+                    <article class="card-content">
+                        <div class="card-text">
+                            <h4>LED Wall</h4>
+                            <p>Node/IoT</p>
+                        </div>
+                    </article>
+                </section>
+                <section class="card">
+                    <article class="card-text">
+                        <div class="card-text">
+                            <h4>Calculator</h4>
+                            <p>React/Javascript/CSS</p>
+                        </div>
+                    </article>
+                </section>
+                <section class="card">
+                    <article class="card-content">
+                        <div class="card-text">
+                            <h4>Pastel Puzzles</h4>
+                            <p>MERN Stack</p>
+                        </div>
+                    </article>
+                </section>
+                <section class="card">
+                    <article class="card-content">
+                        <div class="card-text">
+                            <h4>Run Buddy</h4>
+                            <p>HTML/CSS</p>
+                        </div>
+                    </article>
+                </section>
+            </div>
+        </section>
     </main>
 
-
 </body>
-</html>
 
+</html>
