css done for nav bar and background image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Main image with pic/desired job title -->
     <section class="subtitle">
-        <h2>Software Developer</h2>
+        <h2>Coming Soon</h2>
     </section>
 
     <main>
